--- a/index.html
+++ b/index.html
@@ -323,6 +323,13 @@
                         or crashing. While there is no stewarding for practice sessions, please be courteous to other
                         drivers.</p>
                 </div>
+                <div class="subsection" id="section3-6">
+                    <h2>3.6 Wet Weather</h2>
+                    <p>From now on there is a possibility that every session will include rain. This requires every user 
+                        to be on the latest preview version of Custom Shaders Patch. During rainy sessions, it is up to the 
+                        driver to decide whether or not to switch to wet tyres. However, not switchig and as a result,
+                    driving dangerously will be seen as negligence and subject to penalisation.</p>
+                </div>
             </section>
 
             <section id="section4">
@@ -620,6 +627,18 @@
                         will react with a check mark, and you will be able to see your transaction on the ‘Recent
                         Transactions’ section of the spreadsheet. If you would like to see an in-depth list of all
                         transactions a team has made recently, you can view the Team Balances sheet.</p>
+                        <div class="subsubsection" id="section8-4-1">
+                            <h3>8.4.1 Purchase Timing</h3>
+                            <p>If you would like to make any changes to your team, it must be done at least 24 hours before the race. 
+                                After this point (8PM BST/GMT Saturday) it will be considered too late. Likewise, we urge you to test new
+                                changes before this point.
+                            </p>
+                        </div>
+                        <div class="subsubsection" id="section8-4-2">
+                            <h3>8.4.2 Driver Swaps</h3>
+                            <p>Each team is limited to 1x driver swap per season.
+                            </p>
+                        </div>
                 </div>
                 <div class="subsection" id="section8-5">
                     <h2>8.5 Debt</h2>
@@ -647,14 +666,7 @@
         </main>
     </div>
 
-    <!-- Admin Panel -->
-    <div class="admin-panel" id="adminPanel">
-        <header>
-            Admin Panel
-            <span class="close-button" onclick="toggleAdminPanel(false)">✖</span>
-        </header>
-        <div id="editor" class="editor"></div>
-    </div>
+
 
     <!-- Quill.js Script -->
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
