--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@ body {
 
 <div class="subsubsection" id="section3-5-1">
                         <h3>3.5.1 Required Laps</h3>
-                        <p>To ensure all drivers are procicient enoguh at a particular track, there is a minimum amount of laps
-they must complete through the week. We have divided them into three categoies.
+                        <p>To ensure all drivers are proficient enough at a particular track, there is a minimum amount of laps
+they must complete through the week. We have divided them into three categories.
 <li>Sub 1 Minute Lap: 60 laps</li>
 <li>1 Minute+ Lap: 40 laps</li>
 <li>~2 Minute Lap: 20 laps</li>
 <br>
-These are rough appriximations of how the requirements will be calculated. All laps must be completed at least 1 hour before the race at 7PM BST/GMT. Failure to complete your required laps by this time will
+These are rough approximations of how the requirements will be calculated. All laps must be completed at least 1 hour before the race at 7PM BST/GMT. Failure to complete your required laps by this time will
 mean you are unable to take part in the races.
 </p>
                     </div>
@@ -352,7 +352,7 @@ mean you are unable to take part in the races.
                     <h2>3.6 Wet Weather</h2>
                     <p>From now on there is a possibility that every session will include rain. This requires every user 
                         to be on the latest preview version of Custom Shaders Patch. During rainy sessions, it is up to the 
-                        driver to decide whether or not to switch to wet tyres. However, not switchig and as a result,
+                        driver to decide whether or not to switch to wet tyres. However, not switching and as a result,
                     driving dangerously will be seen as negligence and subject to penalisation.</p>
                 </div>
             </section>
