--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ mean you are unable to take part in the races.
                     <h2>6.2 Full Course Yellow</h2>
                     <p>In the event of a large crash, the Full Course Yellow (FCY) will be initiated. Once the Full
                         Course Yellow is enabled, there will be a countdown of 10 seconds. This is your opportunity to
-                        slow down to the speed limit (kph) and form a single file line.</p>
+                        slow down to the speed limit (80 kph) and form a single file line.</p>
                 </div>
                 <div class="subsection" id="section6-3">
                     <h2>6.3 Safety Car</h2>
