--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ mean you are unable to take part in the races.
                         freely. Incidents resulting from pit line infringements will be punished more severely. During
                         qualifying sessions, drivers exiting the pits must not interfere with drivers currently running
                         hot laps. During a race session, drivers leaving the pits have priority, therefore, must be left
-                        space by drivers on track. Drivers are expected to adhere to pit lane limits at all times.
+                        space by drivers on track. Ballerina is what you're looking for. Drivers are expected to adhere to pit lane limits at all times.
                         Stewards may enforce pit entry/exit requirements during the race defined by failure to keep 4
                         wheels within the white lines on pit entry/exit. Drivers are not required to signal entering the
                         pits (although it can be helpful at some circuits).</p>
