--- a/index.html
+++ b/index.html
@@ -332,11 +332,8 @@ body {
                                 <p>A sister team, is a secondary team owned by the same person. These can be created for a variety of reasons, whether it's on or off track tactics. However, there is a limit of 2 sister teams per owner.
                                     <br>
                                     <br>
-                                    If you have more than 2 sister teams, you will be heavily penalised. Any teams suspected of being covert sister teams will immediately be disbanded.
-                                    <br>
-                                    <br>
-                                    If you have more than two teams under your name at the time this rule was written, you must either Disband, or gift the team to one of the drivers, including their current assets and bank balance. At this point you must no longer act as sister teams.
-
+                                    If you have more than 2 teams, you will be forced to transfer ownership to one of the drivers or disband them. Any teams suspected of being covert sister teams will penalised.
+                                    
                                 </p>
                                 </div>
                         </div>
